// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`evaluateFhirDataServices tests Evaluate Encounter details Evaluate Encounter Care Team should return the correct Encounter care team 1`] = `
<JsonTable
  className="caption-data-title margin-y-0"
  jsonTableData={
    {
      "resultName": "Encounter Care Team",
      "tables": [
        [
          {
            "Dates": {
              "value": <span
                className="text-italic text-base"
              >
                No data
              </span>,
            },
            "Name": {
              "value": <span
                className="text-italic text-base"
              >
                No data
              </span>,
            },
            "Role": {
              "value": "attender",
            },
          },
        ],
      ],
    }
  }
/>
`;

exports[`evaluateFhirDataServices tests Evaluate Encounter details Evaluate Encounter Diagnoses should return the correct diagnoses given an Encounter 1`] = `"OTHER MUSCLE SPASM"`;

exports[`evaluateFhirDataServices tests Evaluate Hospital Encounter Data A bundle with only Discharge Diagnosis returns that data and matches snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Discharge Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": undefined,
    },
    {
      "table": true,
      "title": "Admission Medications",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Hospital Encounter Data should return Admission Medication data when present and match snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Admission Medications",
      "value": <EvaluateTable
        caption="Admission Medications"
        className="margin-y-0"
        columns={
          [
            {
              "columnName": "Medication Name",
              "evaluateEntry": [Function],
            },
            {
              "columnName": "Dose Quantity",
              "infoPath": "medicationDose",
            },
            {
              "columnName": "Start Date",
              "evaluateEntry": [Function],
            },
            {
              "columnName": "Status",
              "infoPath": "status",
            },
            {
              "columnName": "Details",
              "evaluateEntry": [Function],
              "hiddenBaseText": "details",
            },
          ]
        }
        resources={
          [
            {
              "dosage": {
                "dose": {
                  "value": 12,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 24,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "068be591-bf2d-03d4-6c67-23e8fd05c490",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/9afc88b7-cb49-3871-955b-abcf1d5d211a",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/c68c4e1d-73da-6344-f9ce-000197912f5d",
                },
                {
                  "reference": "MedicationDispense/eb3f12ff-c102-c447-422d-9698f0b27e25",
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
                {
                  "reference": "AdverseEvent/f259a79b-8195-e5e2-0431-e8aeb96f2da9",
                },
                {
                  "reference": "AdverseEvent/075cef1c-9dd0-0d27-3f3c-c7daddbeec15",
                },
              ],
            },
            {
              "dosage": {
                "dose": {
                  "value": 1,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 12,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "4151cb09-ad12-7ad3-ecd8-993e87d95b72",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/c08fbd5d-7eeb-2beb-4d8c-f56b7e3ca3da",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/04dc2b51-ca49-764b-cc16-e4c41a0f37a1",
                },
              ],
              "performer": [
                {
                  "actor": {
                    "reference": "Practitioner/69062607-c892-fa70-b750-a67446046070",
                  },
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
              ],
            },
            {
              "dosage": {
                "dose": {
                  "value": 1,
                },
                "rateQuantity": {
                  "unit": "h",
                  "value": 12,
                },
                "route": {
                  "coding": [
                    {
                      "code": "C38288",
                      "display": "ORAL",
                      "system": "urn:oid:2.16.840.1.113883.3.26.1.1",
                    },
                  ],
                },
              },
              "effectivePeriod": {
                "start": "2012-03-18",
              },
              "id": "fa8e7481-d6b3-862f-40a6-6b9777b25f29",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:6c844c75-aa34-411c-b7bd-5e4a9f206e29",
                },
              ],
              "medicationReference": {
                "reference": "Medication/4361c210-6a33-4124-2863-0853046ef9a9",
              },
              "meta": {
                "source": "ecr",
              },
              "partOf": [
                {
                  "reference": "MedicationDispense/c68c4e1d-73da-6344-f9ce-000197912f5d",
                },
              ],
              "performer": [
                {
                  "actor": {
                    "reference": "Practitioner/69062607-c892-fa70-b750-a67446046070",
                  },
                },
              ],
              "reasonReference": [
                {
                  "reference": "Condition/d744cf5d-4e8a-503c-84d9-3843de241f4f",
                },
              ],
              "resourceType": "MedicationAdministration",
              "status": "in-progress",
              "subject": {
                "reference": "Patient/f238f1ae-2f55-cd21-5c90-5e68a10af8ce",
              },
              "supportingInformation": [
                {
                  "reference": "AdverseEvent/006ee19c-8e8c-5d46-07fb-66effdc15d69",
                },
              ],
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": undefined,
    },
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Hospital Encounter Data should return Hospital Encounter Data for Admission and Discharge Diagnosis when present and match snapshot 1`] = `
{
  "availableData": [
    {
      "table": true,
      "title": "Hospital Admission Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Admission Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
    {
      "table": true,
      "title": "Hospital Discharge Diagnosis",
      "value": <EvaluateTable
        caption="Hospital Discharge Diagnosis"
        columns={
          [
            {
              "columnName": "Problem",
              "infoPath": "code",
            },
            {
              "applyToValue": [Function],
              "columnName": "Date/Time",
              "infoPath": "conditionOnsetDate",
            },
          ]
        }
        resources={
          [
            {
              "category": [
                {
                  "coding": [
                    {
                      "code": "problem-item-list",
                      "display": "Problem List Item",
                      "system": "http://hl7.org/fhir/us/core/ValueSet/us-core-condition-category",
                    },
                  ],
                },
              ],
              "code": {
                "coding": [
                  {
                    "code": "840539006",
                    "display": "Disease caused by severe acute respiratory syndrome coronavirus 2 (disorder)",
                    "system": "http://snomed.info/sct",
                  },
                ],
              },
              "extension": [
                {
                  "url": "https://reportstream.cdc.gov/fhir/StructureDefinition/condition-code",
                  "valueCoding": {
                    "code": "840539006",
                    "system": "http://snomed.info/sct",
                  },
                },
              ],
              "id": "d42c4a1f-f700-61bf-62a0-c034257d6a79",
              "identifier": [
                {
                  "system": "urn:ietf:rfc:3986",
                  "value": "urn:uuid:ab1791b0-5c71-11e3-9c78-0800200c9a67",
                },
              ],
              "meta": {
                "source": "ecr",
              },
              "onsetDateTime": "2025-02-05",
              "resourceType": "Condition",
              "subject": {
                "reference": "Patient/b43c2096-4da1-40a5-ba09-db73e169af28",
              },
            },
          ]
        }
      />,
    },
  ],
  "unavailableData": [
    {
      "table": true,
      "title": "Admission Medications",
      "value": undefined,
    },
  ],
}
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when all fields present 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": "123 Test St
Nowhereville, KS",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": "~schedule~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": "~hours~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": "~days~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": "~duties~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": "~pay grade~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": "~employment type~",
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when multiple jobs and sort correctly 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12346",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2015 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12347",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2018 - 01/04/2022",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Past
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when no workplace info 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": false,
                "title": "Workplace Information",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": "~hazard~",
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;

exports[`evaluateFhirDataServices tests Evaluate Occupation History should match snapshot when partial info 1`] = `
<ExpandCollapseAccordion
  className="accordion-rr"
  descriptor="employment details"
  items={
    [
      {
        "content": <React.Fragment>
          <DataDisplay
            item={
              {
                "title": "Dates",
                "value": "01/04/2020 - Present",
              }
            }
          />
          <DataDisplay
            item={
              {
                "title": "Industry",
                "value": "~industry~",
              }
            }
          />
          <DataDisplay
            item={
              {
                "fullWidthContent": true,
                "title": "Workplace Information",
                "value": [
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Address",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Schedule",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Hours",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Days",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Duties",
                        "titleNormal": true,
                        "value": <span
                          className="text-italic text-base"
                        >
                          No data
                        </span>,
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Pay Grade",
                        "titleNormal": true,
                        "value": "~pay grade~",
                      }
                    }
                  />,
                  <DataDisplay
                    item={
                      {
                        "dividerLine": false,
                        "title": "Employment Type",
                        "titleNormal": true,
                        "value": "~employment type~",
                      }
                    }
                  />,
                ],
              }
            }
          />
          <DataDisplay
            item={
              {
                "dividerLine": false,
                "title": "Hazard",
                "value": <span
                  className="text-italic text-base"
                >
                  No data
                </span>,
              }
            }
          />
        </React.Fragment>,
        "expanded": false,
        "headingLevel": "h5",
        "id": "12345",
        "title": <div
          className="display-flex flex-row flex-no-wrap flex-justify"
        >
          <span />
          <span
            className="font-size-xs text-base"
          >
            Current
             Employment
          </span>
        </div>,
      },
    ]
  }
/>
`;
